Added my information, added my resume and the first project

--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -28,6 +28,13 @@
       height: 100%;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
+
+      &-text {
+        padding-top: .75rem;
+        text-align: left;
+        font-weight: 600;
+      }
 
       @include respond(tab-land) {
         height: 100%;
