--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -35,5 +35,12 @@
         font-size: 2rem;
       }
     }
+
+    &__addl {
+      font-size: 2.4rem;
+      margin-top: 2rem;
+      margin-bottom: 2.5rem;
+    }
+
   }
 }
