--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -34,6 +34,16 @@
         margin-bottom: 4.8rem;
       }
 
+      &-icons {
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+
+        .iconify {
+          margin-right: .5rem;
+          margin-bottom: .5rem;
+        }
+      }
+
       &-title {
         font-weight: bold;
         margin-bottom: 1.8rem;
