--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -78,6 +78,7 @@
 .cta-btn--resume {
   color: $white-color;
   border: 2px solid $white-color;
+  margin-right: 7px;
 
   &::after {
     background: $white-color;
